fix test config